[package]
name = "bevy-steamworks"
version = "0.12.0"
authors = ["james7132 <contact@jamessliu.com>"]
edition = "2021"
description = "A Bevy plugin for integrating with the Steamworks SDK."
repository = "https://github.com/HouraiTeahouse/bevy-steamworks"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "gamedev", "steam"]

[features]
default = []
serde = ["steamworks/serde"]

[dependencies]
bevy_log = "0.15.3"
bevy_app = "0.15.3"
bevy_ecs = "0.15.3"
bevy_utils = "0.15.3"

# Depend on current top of the main branch
[dependencies.steamworks]
git = "https://github.com/adnanademovic/steamworks-rs.git"
rev = "993f4a8798a7972681ddfc8e1121b26c8c17d278"

[dependencies.steamworks-sys]
git = "https://github.com/adnanademovic/steamworks-rs.git"
rev = "993f4a8798a7972681ddfc8e1121b26c8c17d278"

[dev-dependencies]
bevy = "0.15.3"
